--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       <link href="assets/css/style.css" rel="stylesheet">
    </head>
    <body>
+   <div class="preloader" id="preloader">
+	  <div id="loader"></div>
+	</div>
       <div class="content-wrap">
          <div class="logo-box">
             <img src="assets/images/logo.png">
