--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	  <meta name="robots" content="index,follow">
+	  <meta name="robots" content="noindex,nofollow">
       <title>Shortly - Free Bootstrap 4 Coming Soon Page</title>
 	  <meta name="description" content="">
       <link rel="icon" href="assets/images/favicon.png" sizes="32x32" />
